Made the calendar's row and col fixed so that it doesn't break in any screen.

--- a/src/Components/pages/Calendar.css
+++ b/src/Components/pages/Calendar.css
@@ -9,8 +9,14 @@
     height: 40px;
 }
 
-.calendar {
+.calendar-row {
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+.calendar-col {
+    display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
 }
